# SecureStorage

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
.github/workflows/: ci.yml
docs/: Build_Instructions.md  important_notes.md  key_design_points.md  project_proposal.md
examples/: CMakeLists.txt  basic_usage.cpp
src/: CMakeLists.txt  SecureStorageManager.cpp  SecureStorageManager.h
src/crypto/: CMakeLists.txt  Encryptor.cpp  Encryptor.h  KeyProvider.cpp  KeyProvider.h
src/file_watcher/: CMakeLists.txt  FileWatcher.cpp  FileWatcher.h
src/storage/: CMakeLists.txt  SecureStore.cpp  SecureStore.h
src/utils/: CMakeLists.txt  Error.cpp  Error.h  FileUtil.cpp  FileUtil.h  ISystemIdProvider.h  Logger.cpp  Logger.h  SystemIdProvider.cpp  SystemIdProvider.h
tests/: CMakeLists.txt
tests/crypto/: CMakeLists.txt  test_Encryptor.cpp  test_KeyProvider.cpp
tests/file_watcher/: CMakeLists.txt  TestFileWatcher.cpp
tests/manager/: CMakeLists.txt  TestSecureStorageManager.cpp
tests/storage/: CMakeLists.txt  test_SecureStore.cpp
tests/utils/: CMakeLists.txt  test_FileUtil.cpp  test_Logger.cpp  test_SystemIdProvider.cpp
